Changes to text content of the eat and events page and change to the relevant CSS code

--- a/eat.html
+++ b/eat.html
@@ -50,7 +50,7 @@
         <h4>Kampong Ah Lee</h4>
         <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The Ship on The Shore</h4>
-        <p>Located in the shore area of Leith, Edinburgh this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the shore at leith.</p>
+        <p>Located in the shore area of Leith in Edinburgh, this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the shore at leith.</p>
         <h4>The Dragonfly</h4>
         <p>Fancy a cocktail? Head down to The Dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novelties like coconut rum cocktails topped with soft meringue</p>
     </div>
