--- a/todo.html
+++ b/todo.html
@@ -40,19 +40,23 @@
 </h3>
 
 <div id="edfest" role="img" aria-label="Women performing in dance show">
-    <div class="to-do-fringe">
+    <div id="to-do-fringe">
         <h3>Edinburgh Festival Fringe</h3>
-        <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+        <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourists travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
     </div>
     
-<div class="to-do-film">
+<div id="to-do-film">
     <h3>Edinburgh international film festival</h3>
     <p>Edinburgh international film festival happens every august and hosts a wealth of avante garde films from independent film makers. It's a must see!</p>
 </div>
 
-<div class="to-do-text3">
-    <h3>Edinburgh festival</h3>
-    <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourist travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+<div id="to-do-book">
+    <h3>Edinburgh international book festival</h3>
+    <p>Edinburgh internation book festival happens every year where writers are invited to come and promote their literature. A must go for avid readers!</p>
+</div>
+<div id="to-do-music">
+    <h3>Edinburgh music festivals</h3>
+    <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and rock music head to the CONNECT festival. If you are a dance music lover why not check out Terminal V at the royal highland centre.</p>
 </div>
 </div>
 
