Further editing to the text content in the home, events, eat and travel page

--- a/eat.html
+++ b/eat.html
@@ -46,13 +46,13 @@
             </div>
     <div id="food-text">
         <h4>Mother India</h4>
-        <p>Mother India is an old favourite for Edinburgh locals and tourists - located in the Newington area of Edinburgh. It offers many favourite indian dishes in small dishes so everyone can share.</p>
+        <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
         <h4>Kampong Ah Lee</h4>
-        <p>Another favourite from Edinburgh locals - offering delicous malaysian food include roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
+        <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The Ship on The Shore</h4>
-        <p>Located in the shore area of Leith in Edinburgh, this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the shore at leith.</p>
+        <p>Located in the shore area of Leith in Edinburgh, this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the waterside.</p>
         <h4>The Dragonfly</h4>
-        <p>Fancy a cocktail? Head down to The Dragonfly in grassmarket area. It offers many of the classic favourites such as expresso martini but also some novelties like coconut rum cocktails topped with soft meringue</p>
+        <p>Fancy a cocktail? Head down to The Dragonfly in grassmarket area. It offers many of the classic favourites such as espresso martini but also some novelties like coconut rum cocktails topped with soft meringue.</p>
     </div>
    </div> 
 </div>
