--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
-            <p>Edinburgh is an old historic town located in southeastern scotland with many historical landmarks and things to do for all age groups.
-            It is the capital of scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world. Love Edinburgh is here to provide recommendations of the best resturants and events to attend in Edinburgh.</p>
+            <p>Edinburgh is an old historic city located in Southeastern Scotland with many historical landmarks and things to do for all age groups.
+            It is the Capital of Scotland and is home to the Edinburgh castle, a popular tourist destination for many people round the world. Love Edinburgh is here to provide recommendations of the best resturants and events to visit in and around Edinburgh.</p>
         </div>
     </div>
 </section>
