--- a/todo.html
+++ b/todo.html
@@ -36,27 +36,27 @@
             </header>
             </section>
 <h3>
-    There are endless activities to do in Edinburgh. The key ones are listed below...
+    Edinburgh is home to world-class events and fesitvals. Here are some of the highlights...
 </h3>
 
 <div id="edfest" role="img" aria-label="Women performing in dance show">
     <div id="to-do-fringe">
         <h3>Edinburgh Festival Fringe</h3>
-        <p>Edinburgh festival happens every august and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every august where performers and tourists travels all over the world to perform or see the many shows. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
+        <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every August where performers and tourists travels all over the world to perform or see over 4000 plus shows in the city. Want a place for food and drink during the festival? Go to George square gardens where there are a variety of food and drinks stalls to meet anyones desires!</p>
     </div>
     
 <div id="to-do-film">
-    <h3>Edinburgh international film festival</h3>
-    <p>Edinburgh international film festival happens every august and hosts a wealth of avante garde films from independent film makers. It's a must see!</p>
+    <h3>Edinburgh International Film Festival</h3>
+    <p>Edinburgh International Film Festival happens every August and hosts a wealth of avante garde films from independent film makers. It's a must see!</p>
 </div>
 
 <div id="to-do-book">
-    <h3>Edinburgh international book festival</h3>
-    <p>Edinburgh internation book festival happens every year where writers are invited to come and promote their literature. A must go for avid readers!</p>
+    <h3>Edinburgh International Book Festival</h3>
+    <p>Edinburgh International Book Festival happens every year where writers and literary love descend on the city and promote and share their literature. A must go for avid readers!</p>
 </div>
 <div id="to-do-music">
     <h3>Edinburgh music festivals</h3>
-    <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and rock music head to the CONNECT festival. If you are a dance music lover why not check out Terminal V at the royal highland centre.</p>
+    <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and rock music head to the Connect festival. If you are a dance music lover why not check out Terminal V at the Royal Highland Centre.</p>
 </div>
 </div>
 
