--- a/travel.html
+++ b/travel.html
@@ -41,9 +41,9 @@
                         <div id="travel-text">
                             <h2>Edinburgh Travel Advice</h2>
                             <h3>To Edinburgh</h3>
-                            <p>Edinburgh airpost hosts many internations flights. Getting from the airport to the city center is easy - you can choose from the 100 bus or the tram straight from the airport. It only takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want cheaper flight options we'd recommend travelling from Glasgow Prestwick airport. There are many train services from Glasgow to Edinburgh.</p>
+                            <p>Edinburgh airport hosts many international flights. Getting from the airport to the city centre is easy - you can choose from the 100 bus or take the tram straight from the airport. It only takes 20-40 minutes. Additionally, you can also travel from nearby Glasgow or if you want cheaper flight options we'd recommend travelling from Glasgow Prestwick airport. There are many train services from Glasgow to Edinburgh.</p>
                             <h3>Travelling within Edinburgh</h3>
-                            <p>There are many bus services within Edinburgh taking you all across the city and beyond. You can get travel between the south and north of Edinburgh via the 49 or 14 buses from Waverly station. You can travel to the south to the west via the 47 bus or north to east using the 12 bus to seafield. Fancy a walk? Take the 15 towards easter bush, which will take you right to the doorstep of the pentlands.</p>
+                            <p>There are many bus services within Edinburgh taking you all across the city and beyond. You can get travel between the south and north of Edinburgh via the 49 or 14 buses from Waverley station. You can travel to the south to the west via the 47 bus or north to east using the 12 bus to Seafield. Fancy a walk? Take the 15 towards Easter Bush, which will take you right to the doorstep of the Pentland Hills.</p>
                         </div>
                     </div>
                  
