Changes to images and restructuring of content on eat page

--- a/eat.html
+++ b/eat.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Edinburgh travel and entertainment advice">
-    <meta name="keywords" content="edinburgh, scotland, travel, events">
+    <meta name="keywords" content="edinburgh, scotland, travel, events, resturants, bars">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
     <title>Edinburgh travel</title>
@@ -39,20 +39,18 @@
     <h3>Food and drink in Edinburgh</h3>
     <!-- <div id="chef-cooking-image" role="img" aria-label="Chef cooking curry in resturant"> -->
         <div id="food-container">
-            <img id="laska-img" src="assets/images/laska.jpg" alt="Laska soup">
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
-            <!-- <img id="cocktails-img" src="assets/images/cocktails.jpg" alt="Two cocktails placed on a bar"> -->
             </div>
     <div id="food-text">
-        <h4>Mother India</h4>
-        <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
-        <h4>Kampong Ah Lee</h4>
-        <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
         <h4>The Ship on The Shore</h4>
         <p>Located in the shore area of Leith in Edinburgh, this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the waterside.</p>
         <h4>The Dragonfly</h4>
         <p>Fancy a cocktail? Head down to The Dragonfly in grassmarket area. It offers many of the classic favourites such as espresso martini but also some novelties like coconut rum cocktails topped with soft meringue.</p>
+        <h4>Mother India</h4>
+        <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
+        <h4>Kampong Ah Lee</h4>
+        <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska soup. This resturant also sports an extensive bubble tea menu.  Like Mother India, this wee gem is located in the Newington area of Edinburgh.</p>
     </div>
    </div> 
 </div>
