--- a/todo.html
+++ b/todo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Edinburgh travel and entertainment advice">
-    <meta name="keywords" content="edinburgh, scotland, travel, events">
+    <meta name="keywords" content="edinburgh, scotland, travel, events, resturants, bars">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
     <title>Edinburgh travel</title>
