CSS code changes to header element

--- a/eat.html
+++ b/eat.html
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
+                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
     <h3>Food and drink in Edinburgh</h3>
@@ -41,6 +41,8 @@
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
             </div>
+    </section>
+    <section>
     <div id="food-text">
         <h4>The Ship on The Shore</h4>
         <p>Located in the shore area of Leith in Edinburgh, this resturant offers some of the best of Scottish seafood and a great wine and champagne selection to accompany your osyters while you sit by the waterside.</p>
@@ -54,7 +56,6 @@
    </div> 
 </div>
 </section>
-<section> 
     <footer class="social-media" id="social-media-eat">
         <h3>Connect with us on social media for live updates on events and offers</h3>
         <ul>
@@ -68,8 +69,6 @@
                 <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
-    
     </footer>
-</section>
 </body>
 </html>
