--- a/todo.html
+++ b/todo.html
@@ -32,14 +32,14 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
+                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
 <h3>
     Edinburgh is home to world-class events and fesitvals. Here are some of the highlights...
 </h3>
 
-<div id="edfest" role="img" aria-label="Women performing in dance show">
+<div id="edfest" role="img" aria-label="People standing in theatre">
     <div id="to-do-fringe">
         <h3>Edinburgh Festival Fringe</h3>
         <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus performances. The city is full of creative energy every August where performers and tourists travels all over the world to perform or see over 4000 plus shows in the city.</p>
@@ -52,20 +52,13 @@
 
 <div id="to-do-book">
     <h3>Edinburgh International Book Festival</h3>
-    <p>Edinburgh International Book Festival happens every year where writers and literary love descend on the city and promote and share their literature. A must go for avid readers!</p>
+    <p>Edinburgh International Book Festival happens every year where writers and literary lovers descend on the city and promote and share their literature. A must go for avid readers!</p>
 </div>
 <div id="to-do-music">
     <h3>Edinburgh music festivals</h3>
     <p>Edinburgh hosts a number of music festivals to provide for all your music needs. If you enjoy pop and rock music head to the Connect festival. If you are a dance music lover why not check out Terminal V at the Royal Highland Centre.</p>
 </div>
 </div>
-
-</div>
-
-
-</div>
-</div>
-<section> 
     <footer class="social-media">
         <h3>Catch us on social media for more info</h3>
         <ul>
@@ -79,8 +72,6 @@
                 <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
-    
     </footer>
-</section>
 </body>
 </html>
