--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                 </li>
             </ul>
         </nav>
-        <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
+        <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
     </header>
     </section>
-    
 <section>
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
         <div id="intro-text">
@@ -50,7 +49,6 @@
         <iframe width="1223" height="688" src="https://www.youtube.com/embed/SRNyfBRhq0A" title="Edinburgh in 4K" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>    
 </section>
-<section> 
 <footer class="social-media">
     <h3>Connect with us on social media for live updates on events and offers</h3>
     <ul>
@@ -65,6 +63,5 @@
         </li>
     </ul>
 </footer>
-</section>
 </body>
 </html>
