--- a/newsletter.html
+++ b/newsletter.html
@@ -32,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="index.html" class="love-edinburgh"><h1>Love Edinburgh</h1></a>
+                <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
 <section>
@@ -54,8 +54,6 @@
 </div>
 </div>
 </section>
-
-<section> 
     <footer class="social-media">
         <h3>Connect with us on social media for live updates on events and offers</h3>
         <ul>
@@ -69,8 +67,6 @@
                 <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
-    
     </footer>
-</section>
 </body>
 </html>
