Added hero-outer id

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
     </header>
     </section>
-<section>
+<section id="hero-outer">
         <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
         <div id="intro-text">
             <h3>Why visit Edinburgh?</h3>
