Modified footer code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Edinburgh travel and entertainment advice">
     <meta name="keywords" content="edinburgh, scotland, travel, events, resturants, bars">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
     <title>Edinburgh travel</title>
 </head>
 <body>
@@ -50,18 +49,22 @@
     </div>    
 </section>
 <footer class="social-media">
-    <h3>Connect with us on social media for live updates on events and offers</h3>
+    <h3>Catch us on social media for more info on events and offers</h3>
     <ul>
         <li>
-            <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://facebook.com" target="_blank" rel="noopener" 
+            aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         </li>
         <li>
-            <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="http://twitter.com" target="_blank" rel="noopener" 
+            aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
         </li>
         <li>
-            <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="http://instagram.com" target="_blank" rel="noopener" 
+            aria-label="Visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
         </li>
     </ul>
 </footer>
+<script src="https://kit.fontawesome.com/d521ba99a7.js" crossorigin="anonymous"></script>
 </body>
 </html>
