Responsive design code for max-width 800px and 980px

--- a/eat.html
+++ b/eat.html
@@ -35,7 +35,7 @@
             </header>
             </section>
 `<section> 
-    <h3>Food and drink in Edinburgh</h3>
+    <h3 id="eat-heading">Food and drink in Edinburgh</h3>
         <div id="food-container">
             <img id="champagne-img" src="assets/images/champagne.jpg" alt="Girls drinking champagne on a night out">
             <img id="oysters-img" src="assets/images/oysters.jpg" alt="A platter of oysters served with lemon wedges">
@@ -53,7 +53,7 @@
 </div>
 </section>
 <footer class="social-media">
-    <h3>Catch us on social media for more info on events and offers</h3>
+    <h3 id="footer-text">Catch us on social media for more info on events and offers</h3>
     <ul>
         <li>
             <a href="http://facebook.com" target="_blank" rel="noopener" 
