--- a/todo.html
+++ b/todo.html
@@ -34,7 +34,7 @@
                 <a href="index.html" id="love-edinburgh"><h1>Love Edinburgh</h1></a>
             </header>
             </section>
-<h3>
+<h3 id="events-heading">
     Edinburgh is home to world-class events and fesitvals. Here are some of the highlights...
 </h3>
 <section id="events-outer">
