--- a/newsletter.html
+++ b/newsletter.html
@@ -40,17 +40,23 @@
             <!-- can perhaps target input elements with class atribute -->
             <!-- can target form element with class -->
     <form method="POST" action="#"> 
-        <h4 id="form-heading">Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh</h4>
-        <label for="fname">First name</label>
-        <input type="text" id="fname" name="fname" required>
+        <div id="form-heading">
+            <h4>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh</h4>
+        </div>
         <br>
-        <label for="lname">Last name</label>
-        <input type="text" id="fname" name="lname" required>
-        <br>
-        <label for="email">Email address</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <input type="submit" value="Submit">
+        <div id="newsletter-form">
+            <label for="fname">First name</label>
+            <input type="text" id="fname" name="fname" required>
+            <br>
+            <label for="lname">Last name</label>
+            <input type="text" id="fname" name="lname" required>
+            <br>
+            <label for="email">Email address</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <input type="submit" value="Submit" class="signup-button">
+        </div>
+       
     </form>
 </div>
 </div>
